--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/api_util.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/api_util.mustache
@@ -2,9 +2,10 @@
 import 'dart:convert';
 import 'dart:typed_data';
 
+import 'package:dio/dio.dart';
+{{#useBuiltValue}}
 import 'package:built_collection/built_collection.dart';
 import 'package:built_value/serializer.dart';
-import 'package:dio/dio.dart';
 
 /// Format the given form parameter object into something that Dio can handle.
 /// Returns primitive or String.
@@ -72,3 +73,4 @@ ListParam<Object?> encodeCollectionQueryParameter<T>(
   }
   throw ArgumentError('Invalid value passed to encodeCollectionQueryParameter');
 }
+{{/useBuiltValue}}
