--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/api/constructor.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/api/constructor.mustache
@@ -1,3 +1,3 @@
   final Serializers _serializers;
 
-  const {{classname}}(this._dio, this._serializers);
+  const {{classname}}({{#useHttp}}this._client{{/useHttp}}{{#useDio}}this._dio{{/useDio}}, this._serializers{{#useHttp}}, this._basePath{{/useHttp}});
