--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/lib.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/lib.mustache
@@ -1,12 +1,7 @@
 {{>header}}
 export 'package:{{pubName}}/{{sourceFolder}}/api.dart';
-export 'package:{{pubName}}/{{sourceFolder}}/auth/api_key_auth.dart';
-export 'package:{{pubName}}/{{sourceFolder}}/auth/basic_auth.dart';
-export 'package:{{pubName}}/{{sourceFolder}}/auth/oauth.dart';
-{{#useBuiltValue}}export 'package:{{pubName}}/{{sourceFolder}}/serializers.dart';
-{{#useDateLibCore}}export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/date.dart';{{/useDateLibCore}}{{/useBuiltValue}}
+export 'package:{{pubName}}/{{sourceFolder}}/auth/_exports.dart';
+{{#useBuiltValue}}export 'package:{{pubName}}/{{sourceFolder}}/serializers.dart';{{/useBuiltValue}}
 
-{{#apiInfo}}{{#apis}}export 'package:{{pubName}}/{{sourceFolder}}/{{apiPackage}}/{{classFilename}}.dart';
-{{/apis}}{{/apiInfo}}
-{{#models}}{{#model}}export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/{{classFilename}}.dart';
-{{/model}}{{/models}}
+export 'package:{{pubName}}/{{sourceFolder}}/{{apiPackage}}/_exports.dart';
+export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/_exports.dart';
