--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/api_key_auth.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/api_key_auth.mustache
@@ -1,7 +1,7 @@
 {{>header}}
 
 import 'package:dio/dio.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/auth.dart';
+import 'auth.dart';
 
 class ApiKeyAuthInterceptor extends AuthInterceptor {
   final Map<String, String> apiKeys = {};
