--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/basic_auth.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/basic_auth.mustache
@@ -2,7 +2,7 @@
 import 'dart:convert';
 
 import 'package:dio/dio.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/auth.dart';
+import 'auth.dart';
 
 class BasicAuthInfo {
   final String username;
