--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/oauth.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/dio/auth/oauth.mustache
@@ -1,6 +1,6 @@
 {{>header}}
 import 'package:dio/dio.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/auth.dart';
+import 'auth.dart';
 
 class OAuthInterceptor extends AuthInterceptor {
   final Map<String, String> tokens = {};
