--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/http/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/http/api_client.mustache
@@ -2,16 +2,14 @@
 import 'package:http/http.dart' as http;{{#useBuiltValue}}
 import 'package:built_value/serializer.dart';
 import 'package:{{pubName}}/{{sourceFolder}}/serializers.dart';{{/useBuiltValue}}
-import 'package:{{pubName}}/{{sourceFolder}}/auth/api_key_auth.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/basic_auth.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/bearer_auth.dart';
-import 'package:{{pubName}}/{{sourceFolder}}/auth/oauth.dart';
+import 'package:{{pubName}}/{{sourceFolder}}/auth/_exports.dart';
 {{#apiInfo}}{{#apis}}import 'package:{{pubName}}/{{sourceFolder}}/{{apiPackage}}/{{classFilename}}.dart';
 {{/apis}}{{/apiInfo}}
 class {{clientName}} {
   static const String basePath = r'{{{basePath}}}';
 
   final http.Client client;
+  final String actualBasePath;
 {{#useBuiltValue}}
   final Serializers serializers;
 
@@ -21,13 +19,13 @@ class {{clientName}} {
     Serializers? serializers,{{/useBuiltValue}}
     String? basePathOverride,
   })  : {{#useBuiltValue}}this.serializers = serializers ?? standardSerializers,{{/useBuiltValue}}
-        this.client = client ?? http.Client() {    
-  }
+        this.client = client ?? http.Client(),
+        this.actualBasePath = basePathOverride ?? basePath;
   {{#apiInfo}}{{#apis}}
 
   /// Get {{classname}} instance, base route and serializer can be overridden by a given but be careful,
   /// by doing that all interceptors will not be executed
   {{classname}} get{{classname}}() {
-    return {{classname}}(client{{#useBuiltValue}}, serializers{{/useBuiltValue}});
+    return {{classname}}(client{{#useBuiltValue}}, serializers{{/useBuiltValue}}, actualBasePath);
   }{{/apis}}{{/apiInfo}}
 }
