--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/json_serializable/api/constructor.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/json_serializable/api/constructor.mustache
@@ -1,1 +1,1 @@
-  const {{classname}}(this._dio);
+  const {{classname}}({{#useDio}}this._dio{{/useDio}}{{#useHttp}}this._client, this._basePath{{/useHttp}});
