--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/http/auth/authentication.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/networking/http/auth/authentication.mustache
@@ -1,4 +1,6 @@
-{{>header}}
+{{>networking/http/auth/header}}
+{{>networking/http/auth/imports}}
+
 // ignore: one_member_abstracts
 abstract class Authentication {
   /// Apply authentication settings to header and query params.
