--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/http-json_serializable/api_imports.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/http-json_serializable/api_imports.mustache
@@ -1,3 +1,3 @@
-// ignore: unused_import
+import 'package:http/http.dart';
 import 'dart:convert';
 import 'package:{{pubName}}/src/deserialize.dart';
