C: don't convert post body strings to JSON
If the body provided for the api request is a just a string itself,
don't try to convert it to JSON, simply submit the string.

--- a/modules/openapi-generator/src/main/resources/C-libcurl/api-body.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/api-body.mustache
@@ -310,6 +310,10 @@ end:
     }
     {{/isArray}}
     {{^isArray}}
+    {{#isString}}
+    localVarBodyParameters = strdup({{paramName}});
+    {{/isString}}
+    {{^isString}}
     cJSON *localVarSingleItemJSON_{{paramName}} = NULL;
     if ({{paramName}} != NULL)
     {
@@ -317,6 +321,7 @@ end:
         localVarSingleItemJSON_{{paramName}} = {{dataType}}_convertToJSON({{paramName}});
         localVarBodyParameters = cJSON_Print(localVarSingleItemJSON_{{paramName}});
     }
+    {{/isString}}
     {{/isArray}}
     {{/bodyParam}}
     {{#produces}}
@@ -444,10 +449,12 @@ end:
     free(localVarBodyParameters);
     {{/isArray}}
     {{^isArray}}
+    {{^isString}}
     if (localVarSingleItemJSON_{{paramName}}) {
         cJSON_Delete(localVarSingleItemJSON_{{paramName}});
         localVarSingleItemJSON_{{paramName}} = NULL;
     }
+    {{/isString}}
     free(localVarBodyParameters);
     {{/isArray}}
     {{/bodyParams}}
