--- a/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.h.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.h.mustache
@@ -31,8 +31,13 @@ typedef struct apiClient_t {
     {{#hasAuthMethods}}
     {{#authMethods}}
     {{#isBasic}}
+    {{#isBasicBasic}}
     char *username;
     char *password;
+    {{/isBasicBasic}}
+    {{#isBasicBearer}}
+    char *accessToken;
+    {{/isBasicBearer}}
     {{/isBasic}}
     {{#isOAuth}}
     char *accessToken;
