C: handle nullable fields correctly

--- a/modules/openapi-generator/src/main/resources/C-libcurl/model-body.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/model-body.mustache
@@ -623,6 +623,9 @@ fail:
     {{#vars}}
     // {{{classname}}}->{{{name}}}
     cJSON *{{{name}}} = cJSON_GetObjectItemCaseSensitive({{classname}}JSON, "{{{baseName}}}");
+    if (cJSON_IsNull({{{name}}})) {
+        {{{name}}} = NULL;
+    }
     {{#required}}
     if (!{{{name}}}) {
         goto end;
