C: clear the response code from previous api calls
Before making an api call, reset apiClient->response_code to zero. That
will protect us from checking stale values if the curl request fails.

--- a/modules/openapi-generator/src/main/resources/C-libcurl/api-body.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/api-body.mustache
@@ -108,6 +108,9 @@ end:
     list_t *localVarContentType = {{#hasConsumes}}list_createList();{{/hasConsumes}}{{^hasConsumes}}NULL;{{/hasConsumes}}
     char      *localVarBodyParameters = NULL;
 
+    // clear the error code from the previous api call
+    apiClient->response_code = 0;
+
     // create the path
     long sizeOfPath = strlen("{{{path}}}")+1;
     char *localVarPath = malloc(sizeOfPath);
